Closed Bug 1703607 Opened 3 years ago Closed 3 years ago

Exempt about:*pages from new bfcache, with the exception of about:blank

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Fission Milestone M7a
Tracking Status
firefox90 --- fixed

People

(Reporter: neha, Assigned: annyG)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

browser/base/content/test/tabs/browser_navigate_through_urls_origin_attributes.js is failing for Fission+BFCache with an unexpected XULFrameLoaderCreated.

Anny, can you debug this failure please?

Flags: needinfo?(agakhokidze)
Severity: -- → S3
Fission Milestone: --- → M7a
Priority: -- → P2
Assignee: nobody → agakhokidze
Status: NEW → ASSIGNED
Flags: needinfo?(agakhokidze)
Summary: Fix browser/base/content/test/tabs/browser_navigate_through_urls_origin_attributes.js for Fission+BFCache → Exempt about:*pages from new bfcache, with the exception of about:blank and about:tabreader

browser/base/content/test/tabs/browser_navigate_through_urls_origin_attributes.js fails with bfcache + fission because it expected that XULFrameLoaderCreated event would be not fired from the point when we open a new tab in a private window to when we navigate it to about:blank. However, initial about:privatebrowsing tab gets bfcached when we navigate to about:blank, and thus we have to create a new frame loader for the about:blank page.

To keep the memory usage down, we can exempt about:* pages (with the exception of about:blank and about:reader) from bfcache.

Summary: Exempt about:*pages from new bfcache, with the exception of about:blank and about:tabreader → Exempt about:*pages from new bfcache, with the exception of about:blank and about:reader
Summary: Exempt about:*pages from new bfcache, with the exception of about:blank and about:reader → Exempt about:*pages from new bfcache, with the exception of about:blank

This also fixes test
browser/base/content/test/tabs/browser_navigate_through_urls_origin_attributes.js
which was failing for fission + bfcacheInParent, because about:privatebrowsing
was getting bfcached, and an extra XULFrameLoaderCreated event was firing, when
we were not expecting it.

Attachment #9216531 - Attachment description: Bug 1703607 - Exempt about:*pages from new bfcache, with the exception of about:blank, r=smaug! → Bug 1703607 - Exempt about:*pages from new bfcache, with the exception of about:blank, r=peterv!
Pushed by agakhokidze@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/dccbd5752b05
Exempt about:*pages from new bfcache, with the exception of about:blank, r=peterv
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: