docshell/base/CanonicalBrowsingContext.cpp
@@ -2123,6 +2123,18 @@ bool CanonicalBrowsingContext::AllowedInBFCache(
             (" * auxiliary BrowsingContexts"));
   }
 
+  // There are not a lot of about:* pages that are allowed to load in
+  // subframes, so it's OK to allow those few about:* pages enter BFCache.
+  MOZ_ASSERT(IsTop(), "Trying to put a non top level BC into BFCache");
+
+  nsCOMPtr<nsIURI> currentURI = GetCurrentURI();
+  // Exempt about:* pages from bfcache, with the exception of about:blank
+  if (currentURI && currentURI->SchemeIs("about") &&
+      !currentURI->GetSpecOrDefault().EqualsLiteral("about:blank")) {
+    bfcacheCombo |= BFCacheStatus::ABOUT_PAGE;
+    MOZ_LOG(gSHIPBFCacheLog, LogLevel::Debug, (" * about:* page"));
+  }
+
   // For telemetry we're collecting all the flags for all the BCs hanging
   // from this top-level BC.
   PreOrderWalk([&](BrowsingContext* aBrowsingContext) {
